# zathura-rpc

./: README.org  pyproject.toml
.github/workflows/: pypi.yml
zathura_rpc/: __main__.py
